--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,12 +1,24 @@
 .navbar_container {
   display: flex;
+  justify-content: space-between;
+  background-color: rgb(142, 199, 225);
+  padding: 10px;
+}
+.navbar_link_container {
   gap: 7px;
+  display: flex;
 }
 
 .navbar_element {
   list-style: none;
 }
 
-.navbar_element a {
-  list-style: none;
+.navbar_element > a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.navbar_cart_container > a {
+  text-decoration: none;
+  color: inherit;
 }
